[gd_scene load_steps=3 format=3 uid="uid://djimk2ymyt7ix"]

[ext_resource type="Script" path="res://Main/Main.gd" id="1_exy7j"]
[ext_resource type="Script" path="res://Main/LevelManager.gd" id="2_lag84"]

[node name="Main" type="Node3D"]
script = ExtResource("1_exy7j")

[node name="MainUi" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartGame" type="Button" parent="MainUi"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"

[node name="LevelManager" type="Node3D" parent="."]
script = ExtResource("2_lag84")

[connection signal="button_up" from="MainUi/StartGame" to="." method="on_start_game_button_pressed"]
